changed so that repeated search is possible without typing in new name

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -143,10 +143,10 @@ function timing(val){
   {
     searchterm = "";
   }
-//  alert (searchterm);
+
   if (pageObj.search && pageObj.search == searchterm)
    {
-    return;
+//    return;
    }
   pageObj.search=searchterm;
   if (pageObj.time){
